@@ -245,15 +245,9 @@ cleanup:
 static void callback (const di_rstring *field, const di_rstring *value, void *data)
 {
   FILE *f = data;
-  if (fwrite (field->string, field->size, 1, f) < 1)
-  {
-    /* FIXME: can't handle write errors, but appease _FORTIFY_SOURCE=2 */
-  }
+  fwrite (field->string, field->size, 1, f);
   fputs (": ", f);
-  if (fwrite (value->string, value->size, 1, f) < 1)
-  {
-    /* FIXME: can't handle write errors, but appease _FORTIFY_SOURCE=2 */
-  }
+  fwrite (value->string, value->size, 1, f);
   fputs ("\n", f);
 }
 
