@@ -1,6 +1,7 @@
 libdebian-installer (0.61) UNRELEASED; urgency=low
 
   * Fix off-by-one error in the rfc822 parser (closes: #500378).
+  * Remove workarounds for ignored errors.
 
  -- Bastian Blank <waldi@debian.org>  Sat, 27 Sep 2008 18:25:14 +0200
 
